<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_screen_title">Enter to the Shoe Store Inventory</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="e_mail_label">E-mail:</string>
    <string name="password_label">Password:</string>
    <string name="email_textbox_hint">user@example.com</string>
    <string name="password_textbox_hint">********</string>
    <string name="instructions1">In the following screen you will be able to visualize all the records of the shoes that have been added.</string>
    <string name="instructions2">To add a new record follow these steps: </string>
    <string name="instructions3">• Click on the <b>+</b> button.</string>
    <string name="instructions4">• Fill out all the fields that are requested such as <i>shoe name, manufacturing company, shoe size</i> and <i>description</i>.</string>
    <string name="instructions5">• Finally click on the <b>Add record</b> button to complete the operation.</string>
    <string name="instructions_title">Instructions</string>
    <string name="man_adding_a_new_entry_image">Man adding a new entry</string>
    <string name="ok_button">Ok!</string>
    <string name="logout_item">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="add_record">Add record</string>
    <string name="add_a_new_shoe_title">Add a new shoe</string>
    <string name="name_of_the_shoe_label">Name of the shoe:</string>
    <string name="company_label">Company:</string>
    <string name="shoe_size_label">Shoe size:</string>
    <string name="description_label">Description</string>
    <string name="shoe_1_hint">Shoe 1</string>
    <string name="company_hint">Company LLC</string>
    <string name="size_hint">12cm</string>
    <string name="about_the_shoe_hint">About the shoe</string>
    <string name="picture_of_the_shoe_description">Picture of the shoe</string>
    <string name="shoe_listing_title">Shoe listing</string>
    <string name="current_inventory_subtitle">Current inventory</string>
    <string name="app_icon_description">App icon</string>
    <string name="add_entries_description">Add entries</string>
</resources>
