<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.views.InstructionsFragment">

    <data></data>

    <!-- TODO: Update blank fragment layout -->

    <!--
     I used LinearLayout since all views are arranged one below the other and each one completely fills the screen from right to left.
     -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli_bold"
                android:gravity="center"
                android:text="@string/instructions_title"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="273dp"
                android:contentDescription="@string/man_adding_a_new_entry_image"
                android:src="@drawable/add_record" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/muli"
                android:singleLine="false"
                android:text="@string/instructions1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli"
                android:text="@string/instructions2"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli"
                android:text="@string/instructions3"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli"
                android:text="@string/instructions4"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/muli"
                android:text="@string/instructions5"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button_toShoeList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ok_button" />

        </LinearLayout>

    </ScrollView>


</layout>
