<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="fields"
            type="com.udacity.shoestore.models.Shoe">
        </variable>
    </data>

    <!-- TODO: Update blank fragment layout -->

    <!--
    I used LinearLayout since all views are arranged one below the other and each one completely fills the screen from right to left.
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="#0539f4"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli_bold"
                android:text="@string/add_a_new_shoe_title"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="30dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_of_the_shoe_label" />

                <EditText
                    android:id="@+id/shoeName_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#F6F6F6"
                    android:ems="10"
                    android:hint="@string/shoe_1_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:importantForAutofill="no"
                    android:text="@={fields.name}"/>

                <TextView
                    android:id="@+id/shoe_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/company_label" />

                <EditText
                    android:id="@+id/shoeCompany_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#F6F6F6"
                    android:ems="10"
                    android:hint="@string/company_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:importantForAutofill="no"
                    android:text="@={fields.company}"/>

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shoe_size_label" />

                <EditText
                    android:id="@+id/shoeSize_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#F6F6F6"
                    android:clickable="true"
                    android:ems="10"
                    android:hint="@string/size_hint"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:text="@={`` + fields.size}" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description_label" />

                <EditText
                    android:id="@+id/shoeDescription_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#F6F6F6"
                    android:ems="10"
                    android:hint="@string/about_the_shoe_hint"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="80dp"
                    android:textAlignment="textStart"
                    android:text="@={fields.description}"/>

                <Button
                    android:id="@+id/addRecord_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_record" />

                <Button
                    android:id="@+id/cancelRecord_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</layout>

